# VectraParse

./: .gitignore  Cargo.toml  Makefile  README.md
3thrd/protobuf/python/docs/: requirements.txt
build-build/: build_ort.sh
crates/vectraparse-core/: Cargo.toml
crates/vectraparse-core/src/: config.rs  lib.rs  metadata.rs  registry.rs  result.rs  runtime.rs
crates/vectraparse-enhance/: Cargo.toml
crates/vectraparse-ffi/: Cargo.toml  FEATURE_MATRIX.md  LICENSES.manifest  USAGE.md
crates/vectraparse-ffi/cmake/: VectraParseConfig.cmake
crates/vectraparse-ffi/include/: vectraparse.h
crates/vectraparse-ffi/pkgconfig/: vectraparse.pc
crates/vectraparse-ffi/src/: lib.rs
crates/vectraparse-mime/: Cargo.toml  build.rs
crates/vectraparse-mime/src/: lib.rs
crates/vectraparse-mso-binary/: Cargo.toml
crates/vectraparse-mso-binary/src/: lib.rs
crates/vectraparse-ocr/: Cargo.toml  build.rs
crates/vectraparse-ocr/src/: lib.rs  ort.rs
crates/vectraparse-parsers/: Cargo.toml
crates/vectraparse-parsers/src/: content_handler.rs  embedded.rs  extractor.rs  lib.rs  security.rs
data/: README.md
docs/dev/: 1-abi-matrix-report.md  1-bench-smoke-report.md  1-fuzz-smoke-report.md  1-plan-rust-tika-rewrite.md  1-release-checklist-report.md  1-research-rust-tika-rewrite.md  2-plan-ole-doc-ppt-xls-extraction.md  2-research-ole-doc-ppt-xls-extraction.md  2-summary-ole-doc-ppt-xls-extraction.md  3-fix-doc-piece-table-main-text.md  README.md
examples/c/: extract_static.c  smoke.c
include/: vectraparse.h
scripts/: abi_matrix_smoke.sh  bench_smoke.sh  fuzz_smoke.sh  golden_compare.sh  golden_validate.sh  release_check.sh
tests/fixtures/ole/: README.md  check_counts.sh  check_extractable.sh  generate_synthetic_samples.sh
tests/fixtures/ole/doc/: synth-1.doc  synth-10.doc  synth-11.doc  synth-12.doc  synth-13.doc  synth-14.doc  synth-15.doc  synth-16.doc  synth-17.doc  synth-18.doc  synth-19.doc  synth-2.doc  synth-20.doc  synth-3.doc  (+6 more)
tests/golden/: manifest.tsv
tests/golden/expected/: minimal_pdf.detect.json
(+40 files in other folders)
