[workspace]
members = [
  "crates/vectraparse-core",
  "crates/vectraparse-mime",
  "crates/vectraparse-parsers",
  "crates/vectraparse-mso-binary",
  "crates/vectraparse-ocr",
  "crates/vectraparse-ffi",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
vectraparse-core = { path = "crates/vectraparse-core" }
vectraparse-mime = { path = "crates/vectraparse-mime" }
vectraparse-parsers = { path = "crates/vectraparse-parsers" }
vectraparse-mso-binary = { path = "crates/vectraparse-mso-binary" }
vectraparse-ocr = { path = "crates/vectraparse-ocr" }
