[package]
name = "vectraparse-parsers"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
vectraparse-core.workspace = true
vectraparse-mime.workspace = true
vectraparse-mso-binary.workspace = true
vectraparse-ocr.workspace = true
sha2 = "0.10"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
